refactor(gateway): 优化网关中用户ID设置逻辑
- 使用Redis替换直接从Sa-Token获取用户ID，提升性能和灵活性
- 支持从请求头中提取并解析Token，调取Redis查询用户ID
- 未登录用户请求直接放行，不添加用户ID请求头
- 日志增加Token处理标识和用户ID输出，方便调试追踪

feat(auth): 完善告警模块配置和接口实现

- 恢复AlarmConfig配置类，实现基于配置切换告警类型
- 新增AlarmInterface接口及注释，统一告警发送方法
- 添加告警类型配置项支持邮件和短信两种实现

feat(oss): 完善阿里云OSS客户端及上传策略实现

- 新增AliyunOSSConfig配置类，使用默认凭证提供者创建OSS客户端
- AliyunOSSFileStrategy增强文件上传过程，添加日志打印和异常处理
- 上传文件时生成唯一UUID作为文件名，拼接后缀保证唯一性
- 统一返回文件的完整访问URL

feat(auth): 更新阿里云短信客户端及短信发送实现

- AliyunSmsClientConfig修改为正确的Dysmsapi客户端初始化方式
- AliyunSmsHelper使用新SDK的SendSmsRequest和SendSmsResponse进行短信发送
- 添加详细日志记录短信发送请求与响应结果

style(config): 统一YAML配置文件格式和注释

- 各模块application.yml添加启动端口注释
- 添加Spring Profile激活说明，统一注释格式
- 补充sa-token相关配置注释，增加可读性
- 网关配置中整理Sa-Token相关属性，明确含义

refactor(api-constants): 统一微服务ApiConstants接口定义

- 删除冗余接口和常量声明，避免重复定义
- 各服务单独定义API服务名，提升维护便利性
- 清理未使用接口，增强代码整洁度

refactor(operationlog): 重构接口及切面日志实现包结构

- 迁移ApiOperationLog注解和切面至hk.ljx.framework包下
- 优化ApiOperationLogAspect，增强日志输出格式及内容
- 删除旧日志模块代码，启用新切面，实现请求参数及响应打印
- 使用切面环绕通知记录方法执行耗时及详细日志

chore(code): 清理文件末尾多余空行及无用改动

- 统一代码格式，去除多余空行
- 修正部分Java文件Import顺序及空行
- 修复Lua脚本末尾空行，增强整洁度