@@ -2,11 +2,21 @@ package hk.ljx.fishhub.user.biz.service.impl;
 
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.util.RandomUtil;
-import com.alibaba.nacos.shaded.com.google.common.base.Preconditions;
-import com.alibaba.nacos.shaded.com.google.common.collect.Lists;
 import com.github.benmanes.caffeine.cache.Cache;
 import com.github.benmanes.caffeine.cache.Caffeine;
+import com.google.common.base.Preconditions;
+import com.google.common.collect.Lists;
 import hk.ljx.framework.biz.context.holder.LoginUserContextHolder;
+import hk.ljx.framework.common.enums.DeletedEnum;
+import hk.ljx.framework.common.enums.StatusEnum;
+import hk.ljx.framework.common.exception.BizException;
+import hk.ljx.framework.common.response.Response;
+import hk.ljx.framework.common.util.DateUtils;
+import hk.ljx.framework.common.util.JsonUtils;
+import hk.ljx.framework.common.util.NumberUtils;
+import hk.ljx.framework.common.util.ParamUtils;
+import hk.ljx.fishhub.count.dto.FindUserCountsByIdRspDTO;
+import hk.ljx.fishhub.user.biz.constant.MQConstants;
 import hk.ljx.fishhub.user.biz.constant.RedisKeyConstants;
 import hk.ljx.fishhub.user.biz.constant.RoleConstants;
 import hk.ljx.fishhub.user.biz.domain.dataobject.RoleDO;
@@ -27,35 +37,28 @@ import hk.ljx.fishhub.user.biz.service.UserService;
 import hk.ljx.fishhub.user.dto.req.*;
 import hk.ljx.fishhub.user.dto.resp.FindUserByIdRspDTO;
 import hk.ljx.fishhub.user.dto.resp.FindUserByPhoneRspDTO;
-import hk.ljx.fishhub.count.dto.FindUserCountByIdRspDTO;
-import hk.ljx.framework.common.enums.DeletedEnum;
-import hk.ljx.framework.common.enums.StatusEnum;
-import hk.ljx.framework.common.exception.BizException;
-import hk.ljx.framework.common.response.Response;
-import hk.ljx.framework.common.util.JsonUtils;
-import hk.ljx.framework.common.util.DateUtils;
-import hk.ljx.framework.common.util.NumberUtils;
-import hk.ljx.framework.common.util.ParamUtils;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.rocketmq.client.producer.SendCallback;
+import org.apache.rocketmq.client.producer.SendResult;
+import org.apache.rocketmq.spring.core.RocketMQTemplate;
 import org.springframework.data.redis.core.RedisOperations;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.core.SessionCallback;
+import org.springframework.messaging.Message;
+import org.springframework.messaging.support.MessageBuilder;
 import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
-import static hk.ljx.fishhub.user.biz.enums.ResponseCodeEnum.*;
 
 @Service
 @Slf4j
@@ -63,68 +66,96 @@ public class UserServiceImpl implements UserService {
 
     @Resource
     private UserDOMapper userDOMapper;
-
-    @Resource
-    private OssRpcService ossRpcService;
-
     @Resource
     private UserRoleDOMapper userRoleDOMapper;
-
     @Resource
     private RoleDOMapper roleDOMapper;
-
+    @Resource
+    private OssRpcService ossRpcService;
     @Resource
     private RedisTemplate<String, Object> redisTemplate;
-
     @Resource
     private DistributedIdGeneratorRpcService distributedIdGeneratorRpcService;
-
-    @Resource
-    private CountRpcService countRpcService;
-
     @Resource(name = "taskExecutor")
     private ThreadPoolTaskExecutor threadPoolTaskExecutor;
+    @Resource
+    private UserDOMapper userMapper;
+    @Resource
+    private CountRpcService countRpcService;
+    @Resource
+    private RocketMQTemplate rocketMQTemplate;
 
     /**
      * 用户信息本地缓存
      */
     private static final Cache<Long, FindUserByIdRspDTO> LOCAL_CACHE = Caffeine.newBuilder()
-            .initialCapacity(10000)
-            .maximumSize(10000)
-            .expireAfterWrite(1, TimeUnit.HOURS)
+            .initialCapacity(10000) // 设置初始容量为 10000 个条目
+            .maximumSize(10000) // 设置缓存的最大容量为 10000 个条目
+            .expireAfterWrite(1, TimeUnit.HOURS) // 设置缓存条目在写入后 1 小时过期
             .build();
 
+    /**
+     * 用户主页信息本地缓存
+     */
+    private static final Cache<Long, FindUserProfileRspVO> PROFILE_LOCAL_CACHE = Caffeine.newBuilder()
+            .initialCapacity(10000) // 设置初始容量为 10000 个条目
+            .maximumSize(10000) // 设置缓存的最大容量为 10000 个条目
+            .expireAfterWrite(5, TimeUnit.MINUTES) // 设置缓存条目在写入后 5 分钟过期
+            .build();
+
+    /**
+     * 更新用户信息
+     *
+     * @param updateUserInfoReqVO
+     * @return
+     */
     @Override
     public Response<?> updateUserInfo(UpdateUserInfoReqVO updateUserInfoReqVO) {
+        // 被更新的用户 ID
+        Long userId = updateUserInfoReqVO.getUserId();
+        // 当前登录的用户 ID
+        Long loginUserId = LoginUserContextHolder.getUserId();
+
+        // 非号主本人，无法修改其个人信息
+        if (!Objects.equals(loginUserId, userId)) {
+            throw new BizException(ResponseCodeEnum.CANT_UPDATE_OTHER_USER_PROFILE);
+        }
+
         UserDO userDO = new UserDO();
-        userDO.setId(LoginUserContextHolder.getUserId());
-        // 标识为是否需要更新
+        // 设置当前需要更新的用户 ID
+        userDO.setId(userId);
+        // 标识位：是否需要更新
         boolean needUpdate = false;
+
         // 头像
-        MultipartFile avatar = updateUserInfoReqVO.getAvatar();
-        if (Objects.nonNull(avatar)) {
-            // 调用文件上传接口
-            String avatarUrl = ossRpcService.uploadFile(avatar);
-            if (StringUtils.isBlank(avatarUrl)){
-                throw new BizException(UPLOAD_AVATAR_FAIL);
+        MultipartFile avatarFile = updateUserInfoReqVO.getAvatar();
+
+        if (Objects.nonNull(avatarFile)) {
+            String avatar = ossRpcService.uploadFile(avatarFile);
+            log.info("==> 调用 oss 服务成功，上传头像，url：{}", avatar);
+
+            if (StringUtils.isBlank(avatar)) {
+                throw new BizException(ResponseCodeEnum.UPLOAD_AVATAR_FAIL);
             }
-            userDO.setAvatar(avatarUrl);
+
+            userDO.setAvatar(avatar);
             needUpdate = true;
         }
+
         // 昵称
         String nickname = updateUserInfoReqVO.getNickname();
         if (StringUtils.isNotBlank(nickname)) {
-            Preconditions.checkArgument(ParamUtils.checkNickname(nickname), NICK_NAME_VALID_FAIL.getErrorMessage());
+            Preconditions.checkArgument(ParamUtils.checkNickname(nickname), ResponseCodeEnum.NICK_NAME_VALID_FAIL.getErrorMessage());
             userDO.setNickname(nickname);
             needUpdate = true;
         }
-        // 飞鱼社区号
         String fishhubId = updateUserInfoReqVO.getFishhubId();
         if (StringUtils.isNotBlank(fishhubId)) {
             Preconditions.checkArgument(ParamUtils.checkFishhubId(fishhubId), ResponseCodeEnum.FISHHUB_ID_VALID_FAIL.getErrorMessage());
             userDO.setFishhubId(fishhubId);
             needUpdate = true;
         }
+
         // 性别
         Integer sex = updateUserInfoReqVO.getSex();
         if (Objects.nonNull(sex)) {
@@ -132,6 +163,7 @@ public class UserServiceImpl implements UserService {
             userDO.setSex(sex);
             needUpdate = true;
         }
+
         // 生日
         LocalDate birthday = updateUserInfoReqVO.getBirthday();
         if (Objects.nonNull(birthday)) {
@@ -150,26 +182,80 @@ public class UserServiceImpl implements UserService {
         // 背景图
         MultipartFile backgroundImgFile = updateUserInfoReqVO.getBackgroundImg();
         if (Objects.nonNull(backgroundImgFile)) {
-            // 调用对象存储服务上传文件
-            String backgroundImgUrl = ossRpcService.uploadFile(backgroundImgFile);
-            if (StringUtils.isBlank(backgroundImgUrl)){
+            String backgroundImg = ossRpcService.uploadFile(backgroundImgFile);
+            log.info("==> 调用 oss 服务成功，上传背景图，url：{}", backgroundImg);
+
+            if (StringUtils.isBlank(backgroundImg)) {
                 throw new BizException(ResponseCodeEnum.UPLOAD_BACKGROUND_IMG_FAIL);
             }
-            userDO.setBackgroundImg(backgroundImgUrl);
+
+            userDO.setBackgroundImg(backgroundImg);
             needUpdate = true;
         }
 
         if (needUpdate) {
+            // 删除用户缓存
+            deleteUserRedisCache(userId);
+
             // 更新用户信息
             userDO.setUpdateTime(LocalDateTime.now());
             userDOMapper.updateByPrimaryKeySelective(userDO);
+
+            // 延时双删
+            sendDelayDeleteUserRedisCacheMQ(userId);
         }
         return Response.success();
     }
 
+    /**
+     * 异步发送延时消息
+     * @param userId
+     */
+    private void sendDelayDeleteUserRedisCacheMQ(Long userId) {
+        Message<String> message = MessageBuilder.withPayload(String.valueOf(userId))
+                .build();
+
+        rocketMQTemplate.asyncSend(MQConstants.TOPIC_DELAY_DELETE_USER_REDIS_CACHE, message,
+                new SendCallback() {
+                    @Override
+                    public void onSuccess(SendResult sendResult) {
+                        log.info("## 延时删除 Redis 用户缓存消息发送成功...");
+                    }
+
+                    @Override
+                    public void onException(Throwable e) {
+                        log.error("## 延时删除 Redis 用户缓存消息发送失败...", e);
+                    }
+                },
+                3000, // 超时时间
+                1 // 延迟级别，1 表示延时 1s
+        );
+    }
+
+    /**
+     * 删除 Redis 中的用户缓存
+     * @param userId
+     */
+    private void deleteUserRedisCache(Long userId) {
+        // 构建 Redis Key
+        String userInfoRedisKey = RedisKeyConstants.buildUserInfoKey(userId);
+        String userProfileRedisKey = RedisKeyConstants.buildUserProfileKey(userId);
+
+        // 批量删除
+        redisTemplate.delete(Arrays.asList(userInfoRedisKey, userProfileRedisKey));
+    }
+
+    /**
+     * 用户注册
+     *
+     * @param registerUserReqDTO
+     * @return
+     */
     @Override
+    @Transactional(rollbackFor = Exception.class)
     public Response<Long> register(RegisterUserReqDTO registerUserReqDTO) {
         String phone = registerUserReqDTO.getPhone();
+
         // 先判断该手机号是否已被注册
         UserDO userDO1 = userDOMapper.selectByPhone(phone);
 
@@ -181,7 +267,6 @@ public class UserServiceImpl implements UserService {
         }
 
         // 否则注册新用户
-        // 获取全局自增的fishhub ID
         String fishhubId = distributedIdGeneratorRpcService.getFishhubId();
 
         // RPC: 调用分布式 ID 生成服务生成用户 ID
@@ -191,8 +276,8 @@ public class UserServiceImpl implements UserService {
         UserDO userDO = UserDO.builder()
                 .id(userId)
                 .phone(phone)
-                .fishhubId(fishhubId) // 自动生成 fishhub 号 ID
-                .nickname("小鱼" + fishhubId) // 自动生成昵称, 如：小鱼10000
+                .fishhubId(fishhubId) // 自动生成小红书号 ID
+                .nickname("小红薯" + fishhubId) // 自动生成昵称, 如：小红薯10000
                 .status(StatusEnum.ENABLE.getValue()) // 状态为启用
                 .createTime(LocalDateTime.now())
                 .updateTime(LocalDateTime.now())
@@ -201,6 +286,9 @@ public class UserServiceImpl implements UserService {
 
         // 添加入库
         userDOMapper.insert(userDO);
+
+        // 获取刚刚添加入库的用户 ID
+        // Long userId = userDO.getId();
 
         // 给该用户分配一个默认角色
         UserRoleDO userRoleDO = UserRoleDO.builder()
@@ -224,23 +312,44 @@ public class UserServiceImpl implements UserService {
         return Response.success(userId);
     }
 
+    /**
+     * 根据手机号查询用户信息
+     *
+     * @param findUserByPhoneReqDTO
+     * @return
+     */
     @Override
     public Response<FindUserByPhoneRspDTO> findByPhone(FindUserByPhoneReqDTO findUserByPhoneReqDTO) {
         String phone = findUserByPhoneReqDTO.getPhone();
+
+        // 根据手机号查询用户信息
         UserDO userDO = userDOMapper.selectByPhone(phone);
 
-        if (Objects.isNull(userDO)){
-            throw new BizException(USER_NOT_FOUND);
+        // 判空
+        if (Objects.isNull(userDO)) {
+            throw new BizException(ResponseCodeEnum.USER_NOT_FOUND);
         }
-        return Response.success(FindUserByPhoneRspDTO.builder()
+
+        // 构建返参
+        FindUserByPhoneRspDTO findUserByPhoneRspDTO = FindUserByPhoneRspDTO.builder()
                 .id(userDO.getId())
                 .password(userDO.getPassword())
-                .build());
+                .build();
+
+        return Response.success(findUserByPhoneRspDTO);
     }
 
+    /**
+     * 更新密码
+     *
+     * @param updateUserPasswordReqDTO
+     * @return
+     */
     @Override
     public Response<?> updatePassword(UpdateUserPasswordReqDTO updateUserPasswordReqDTO) {
+        // 获取当前请求对应的用户 ID
         Long userId = LoginUserContextHolder.getUserId();
+
         UserDO userDO = UserDO.builder()
                 .id(userId)
                 .password(updateUserPasswordReqDTO.getEncodePassword()) // 加密后的密码
@@ -269,29 +378,32 @@ public class UserServiceImpl implements UserService {
             return Response.success(findUserByIdRspDTOLocalCache);
         }
 
-        // 从 redis 中查询用户信息
+        // 用户缓存 Redis Key
         String userInfoRedisKey = RedisKeyConstants.buildUserInfoKey(userId);
+
+        // 再从 Redis 缓存中查询
         String userInfoRedisValue = (String) redisTemplate.opsForValue().get(userInfoRedisKey);
+
+        // 若 Redis 缓存中存在该用户信息
         if (StringUtils.isNotBlank(userInfoRedisValue)) {
             // 将存储的 Json 字符串转换成对象，并返回
             FindUserByIdRspDTO findUserByIdRspDTO = JsonUtils.parseObject(userInfoRedisValue, FindUserByIdRspDTO.class);
             // 异步线程中将用户信息存入本地缓存
             threadPoolTaskExecutor.submit(() -> {
-                if (Objects.nonNull(findUserByIdRspDTO)) {
-                    // 写入本地缓存
-                    LOCAL_CACHE.put(userId, findUserByIdRspDTO);
-                }
+                // 写入本地缓存
+                LOCAL_CACHE.put(userId, findUserByIdRspDTO);
             });
             return Response.success(findUserByIdRspDTO);
         }
 
-        // 未查到则根据用户 ID 从数据库查询
+        // 否则, 从数据库中查询
+        // 根据用户 ID 查询用户信息
         UserDO userDO = userDOMapper.selectByPrimaryKey(userId);
 
         // 判空
         if (Objects.isNull(userDO)) {
             threadPoolTaskExecutor.execute(() -> {
-                // 防止缓存穿透，将空数据存入 Redis 缓存
+                // 防止缓存穿透，将空数据存入 Redis 缓存 (过期时间不宜设置过长)
                 // 保底1分钟 + 随机秒数
                 long expireSeconds = 60 + RandomUtil.randomInt(60);
                 redisTemplate.opsForValue().set(userInfoRedisKey, "null", expireSeconds, TimeUnit.SECONDS);
@@ -309,7 +421,7 @@ public class UserServiceImpl implements UserService {
 
         // 异步将用户信息存入 Redis 缓存，提升响应速度
         threadPoolTaskExecutor.submit(() -> {
-            // 过期时间（保底1天 + 随机秒数，将缓存过期时间打散，防止缓存雪崩）
+            // 过期时间（保底1天 + 随机秒数，将缓存过期时间打散，防止同一时间大量缓存失效，导致数据库压力太大）
             long expireSeconds = 60*60*24 + RandomUtil.randomInt(60*60*24);
             redisTemplate.opsForValue()
                     .set(userInfoRedisKey, JsonUtils.toJsonString(findUserByIdRspDTO), expireSeconds, TimeUnit.SECONDS);
@@ -320,6 +432,7 @@ public class UserServiceImpl implements UserService {
 
     /**
      * 批量根据用户 ID 查询用户信息
+     *
      * @param findUsersByIdsReqDTO
      * @return
      */
@@ -327,6 +440,7 @@ public class UserServiceImpl implements UserService {
     public Response<List<FindUserByIdRspDTO>> findByIds(FindUsersByIdsReqDTO findUsersByIdsReqDTO) {
         // 需要查询的用户 ID 集合
         List<Long> userIds = findUsersByIdsReqDTO.getIds();
+
         // 构建 Redis Key 集合
         List<String> redisKeys = userIds.stream()
                 .map(RedisKeyConstants::buildUserInfoKey)
@@ -342,11 +456,11 @@ public class UserServiceImpl implements UserService {
 
         // 返参
         List<FindUserByIdRspDTO> findUserByIdRspDTOS = Lists.newArrayList();
+
         // 将过滤后的缓存集合，转换为 DTO 返参实体类
         if (CollUtil.isNotEmpty(redisValues)) {
             findUserByIdRspDTOS = redisValues.stream()
-                    .map(value -> JsonUtils.parseObject(String.valueOf(value), FindUserByIdRspDTO.class))
-                    .collect(Collectors.toList());
+                    .map(value -> JsonUtils.parseObject(String.valueOf(value), FindUserByIdRspDTO.class)).toList();
         }
 
         // 如果被查询的用户信息，都在 Redis 缓存中, 则直接返回
@@ -373,7 +487,9 @@ public class UserServiceImpl implements UserService {
 
         // 从数据库中批量查询
         List<UserDO> userDOS = userDOMapper.selectByIds(userIdsNeedQuery);
+
         List<FindUserByIdRspDTO> findUserByIdRspDTOS2 = null;
+
         // 若数据库查询的记录不为空
         if (CollUtil.isNotEmpty(userDOS)) {
             // DO 转 DTO
@@ -425,18 +541,54 @@ public class UserServiceImpl implements UserService {
         return Response.success(findUserByIdRspDTOS);
     }
 
+    /**
+     * 获取用户主页信息
+     *
+     * @param findUserProfileReqVO
+     * @return
+     */
     @Override
     public Response<FindUserProfileRspVO> findUserProfile(FindUserProfileReqVO findUserProfileReqVO) {
+        // 要查询的用户 ID
         Long userId = findUserProfileReqVO.getUserId();
+
+        // 若入参中用户 ID 为空，则查询当前登录用户
         if (Objects.isNull(userId)) {
             userId = LoginUserContextHolder.getUserId();
         }
 
-        UserDO userDO = userDOMapper.selectByPrimaryKey(userId);
+        // 1. 优先查本地缓存
+//        if (!Objects.equals(userId, LoginUserContextHolder.getUserId())) { // 如果是用户本人查看自己的主页，则不走本地缓存（对本人保证实时性）
+//            FindUserProfileRspVO userProfileLocalCache = PROFILE_LOCAL_CACHE.getIfPresent(userId);
+//            if (Objects.nonNull(userProfileLocalCache)) {
+//                log.info("## 用户主页信息命中本地缓存: {}", JsonUtils.toJsonString(userProfileLocalCache));
+//                return Response.success(userProfileLocalCache);
+//            }
+//        }
+//
+//        // 2. 再查询 Redis 缓存
+//        String userProfileRedisKey = RedisKeyConstants.buildUserProfileKey(userId);
+//
+//        String userProfileJson = (String) redisTemplate.opsForValue().get(userProfileRedisKey);
+//
+//        if (StringUtils.isNotBlank(userProfileJson)) {
+//            FindUserProfileRspVO findUserProfileRspVO = JsonUtils.parseObject(userProfileJson, FindUserProfileRspVO.class);
+//            // 异步同步到本地缓存
+//            syncUserProfile2LocalCache(userId, findUserProfileRspVO);
+//            // 如果是作者本人查看，保证计数的实时性
+//            authorGetActualCountData(userId, findUserProfileRspVO);
+//
+//            return Response.success(findUserProfileRspVO);
+//        }
+
+        // 3. 若 Redis 中无缓存，再查询数据库
+        UserDO userDO = userMapper.selectByPrimaryKey(userId);
+
         if (Objects.isNull(userDO)) {
             throw new BizException(ResponseCodeEnum.USER_NOT_FOUND);
         }
 
+        // 构建返参 VO
         FindUserProfileRspVO findUserProfileRspVO = FindUserProfileRspVO.builder()
                 .userId(userDO.getId())
                 .avatar(userDO.getAvatar())
@@ -446,24 +598,82 @@ public class UserServiceImpl implements UserService {
                 .introduction(userDO.getIntroduction())
                 .build();
 
+        // 计算年龄
         LocalDate birthday = userDO.getBirthday();
-        if (Objects.nonNull(birthday)) {
-            findUserProfileRspVO.setAge(DateUtils.calculateAge(birthday));
-            findUserProfileRspVO.setBirthday(birthday);
-        }
+        findUserProfileRspVO.setAge(Objects.isNull(birthday) ? 0 : DateUtils.calculateAge(birthday));
 
-        FindUserCountByIdRspDTO countData = countRpcService.findUserCountById(userId);
-        if (Objects.nonNull(countData)) {
-            long fansTotal = Objects.requireNonNullElse(countData.getFansTotal(), 0L);
-            long followingTotal = Objects.requireNonNullElse(countData.getFollowingTotal(), 0L);
-            long likeTotal = Objects.requireNonNullElse(countData.getLikeTotal(), 0L);
-            long collectTotal = Objects.requireNonNullElse(countData.getCollectTotal(), 0L);
+        // RPC: Feign 调用计数服务
+        // 关注数、粉丝数、收藏与点赞总数；获得的点赞数、收藏数
+        rpcCountServiceAndSetData(userId, findUserProfileRspVO);
+
+//        // 异步同步到 Redis 中
+//        syncUserProfile2Redis(userProfileRedisKey, findUserProfileRspVO);
+//        // 异步同步到本地缓存
+//        syncUserProfile2LocalCache(userId, findUserProfileRspVO);
+
+        return Response.success(findUserProfileRspVO);
+    }
+
+    /**
+     * Feign 调用计数服务, 并设置计数数据
+     * @param userId
+     * @param findUserProfileRspVO
+     */
+    private void rpcCountServiceAndSetData(Long userId, FindUserProfileRspVO findUserProfileRspVO) {
+        FindUserCountsByIdRspDTO findUserCountsByIdRspDTO = countRpcService.findUserCountById(userId);
+
+        if (Objects.nonNull(findUserCountsByIdRspDTO)) {
+            Long fansTotal = findUserCountsByIdRspDTO.getFansTotal();
+            Long followingTotal = findUserCountsByIdRspDTO.getFollowingTotal();
+            Long likeTotal = findUserCountsByIdRspDTO.getLikeTotal();
+            Long collectTotal = findUserCountsByIdRspDTO.getCollectTotal();
+            Long noteTotal = findUserCountsByIdRspDTO.getNoteTotal();
 
             findUserProfileRspVO.setFansTotal(NumberUtils.formatNumberString(fansTotal));
             findUserProfileRspVO.setFollowingTotal(NumberUtils.formatNumberString(followingTotal));
             findUserProfileRspVO.setLikeAndCollectTotal(NumberUtils.formatNumberString(likeTotal + collectTotal));
+            findUserProfileRspVO.setNoteTotal(NumberUtils.formatNumberString(noteTotal));
+            findUserProfileRspVO.setLikeTotal(NumberUtils.formatNumberString(likeTotal));
+            findUserProfileRspVO.setCollectTotal(NumberUtils.formatNumberString(collectTotal));
         }
+    }
 
-        return Response.success(findUserProfileRspVO);
+    /**
+     * 作者本人获取真实的计数数据（保证实时性）
+     * @param userId
+     * @param findUserProfileRspVO
+     */
+    private void authorGetActualCountData(Long userId, FindUserProfileRspVO findUserProfileRspVO) {
+        if (Objects.equals(userId, LoginUserContextHolder.getUserId())) {
+            rpcCountServiceAndSetData(userId, findUserProfileRspVO);
+        }
+    }
+
+    /**
+     * 异步同步到本地缓存
+     *
+     * @param userId
+     * @param findUserProfileRspVO
+     */
+    private void syncUserProfile2LocalCache(Long userId, FindUserProfileRspVO findUserProfileRspVO) {
+        threadPoolTaskExecutor.submit(() -> {
+            PROFILE_LOCAL_CACHE.put(userId, findUserProfileRspVO);
+        });
+    }
+
+    /**
+     * 异步同步到 Redis 中
+     *
+     * @param userProfileRedisKey
+     * @param findUserProfileRspVO
+     */
+    private void syncUserProfile2Redis(String userProfileRedisKey, FindUserProfileRspVO findUserProfileRspVO) {
+        threadPoolTaskExecutor.submit(() -> {
+            // 设置随机过期时间 (2小时以内)
+            long expireTime = 60*60 + RandomUtil.randomInt(60 * 60);
+
+            // 将 VO 转为 Json 字符串写入到 Redis 中
+            redisTemplate.opsForValue().set(userProfileRedisKey, JsonUtils.toJsonString(findUserProfileRspVO), expireTime, TimeUnit.SECONDS);
+        });
     }
 }
